--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -3,13 +3,17 @@ name = "fastapi-tdd-docker"
 version = "0.1.0"
 description = ""
 authors = ["Samuel Bourgeat <samuel.kumar@hotmail.fr>"]
-readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = "0.115.12"
 uvicorn = "0.34.1"
 pydantic-settings = "2.8.1"
+asyncpg = "0.30.0"
+tortoise-orm = "0.25.0"
+
+
 
 [build-system]
 requires = ["poetry-core"]
