--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "terminal.integrated.fontFamily": "JetBrains Mono"
+    "terminal.integrated.fontFamily": "JetBrains Mono",
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.typeCheckingMode": "standard"
 }
