--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -12,7 +12,7 @@ uvicorn = "0.34.1"
 pydantic-settings = "2.8.1"
 asyncpg = "0.30.0"
 tortoise-orm = "0.25.0"
-
+aerich = "0.8.2"
 
 
 [build-system]
