--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,20 +2,26 @@ name: Continuous Integration and Delivery
 
 on: [push]
 
-env: 
-  IMAGE: ghcr.io/${{ github.repository | toLowerCase }}/summarizer
+env:
+  IMAGE: ghcr.io/$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')/summarizer
 
 jobs:
+
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: main
       - name: Log in to GitHub Packages
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin ghcr.io
+        run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin ghcr.io
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Pull image
-        run: docker pull ${{ env.IMAGE }}:latest || true
+        run: |
+          docker pull ${{ env.IMAGE }}:latest || true
       - name: Build image
         run: |
           docker build \
@@ -24,8 +30,9 @@ jobs:
             --file ./project/Dockerfile.prod \
             "./project"
       - name: Push image
-        run: docker push ${{ env.IMAGE }}:latest
-  
+        run: |
+          docker push ${{ env.IMAGE }}:latest
+
   test:
     name: Test Docker Image
     runs-on: ubuntu-latest
@@ -33,13 +40,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: main
       - name: Log in to GitHub Packages
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login -u ${{ github.actor }} --password-stdin ghcr.io
+        run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin ghcr.io
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Pull image
-        run: docker pull ${{ env.IMAGE }}:latest
+        run: |
+          docker pull ${{ env.IMAGE }}:latest || true
+      - name: Build image
+        run: |
+          docker build \
+            --cache-from ${{ env.IMAGE }}:latest \
+            --tag ${{ env.IMAGE }}:latest \
+            --file ./project/Dockerfile.prod \
+            "./project"
       - name: Run container
         run: |
           docker run \
+            -d \
             --name fastapi-tdd \
             -e PORT=8765 \
             -e ENVIRONMENT=dev \
@@ -50,8 +70,8 @@ jobs:
       - name: Pytest
         run: docker exec fastapi-tdd python -m pytest .
       - name: Flake8
-        run: docker exec fastapi-tdd flake8 .
+        run: docker exec fastapi-tdd python -m flake8 .
       - name: Black
-        run: docker exec fastapi-tdd black --check .
-      - name: Isort
-        run: docker exec fastapi-tdd isort . --check-only
+        run: docker exec fastapi-tdd python -m black . --check
+      - name: isort
+        run: docker exec fastapi-tdd python -m isort . --check-only
