--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     name: Build Docker Image
     runs-on: ubuntu-latest
     permissions:
+      write-all
       contents: read
       packages: write
     steps:
