--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,7 @@ jobs:
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    permissions:
-      write-all
-      contents: read
-      packages: write
+    permissions: write-all
     steps:
       - name: Checkout
         uses: actions/checkout@v3
