--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -15,9 +15,10 @@ RUN apt-get update \
 
 # install python dependencies 
 RUN pip install --upgrade pip
-#RUN pip install poetry
 COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+COPY ./requirements-dev.txt .
+RUN pip install -r requirements-dev.txt
+
 # add app
 COPY . .
 
