--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -44,6 +45,7 @@ jobs:
   test:
     name: Test Docker Image
     runs-on: ubuntu-latest
+    permissions: write-all
     needs: build
     steps:
       - name: Checkout
@@ -96,6 +98,7 @@ jobs:
   deploy:
     name: Deploy to Heroku
     runs-on: ubuntu-latest
+    permissions: write-all
     needs: [build, test]
     env:
       HEROKU_APP_NAME: afternoon-beyond-76194
